<?xml version="1.0"?>
<package format="2">

    <name>controlit_core</name>

    <version>0.0.0</version>

    <description>
        Contains the core ControlIt! components.
    </description>

    <license>LGPLv2.1</license>

    <url>http://ros.org/wiki/controlit_core</url>

    <maintainer email="liangfok@utexas.edu">Chien-Liang Fok</maintainer>

    <author>Chien-Liang Fok</author>
    <author>Gwendolyn Johnson</author>
    <author>J.D. Yamokoski</author>

    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>

    <depend>cmake_modules</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>diagnostic_msgs</depend>
    <depend>tf</depend>
    <depend>pluginlib</depend>
    <depend>controlit_model</depend>
    <depend>controlit_dependency_addons</depend>
    <depend>controlit_logging</depend>

<!--     <depend package="std_msgs" />
    <depend package="geometry_msgs" />
    <depend package="sensor_msgs" />
    <depend package="diagnostic_msgs" />

    <depend package="tf" />
    <depend package="pluginlib" />
    <depend package="controlit_model" />

    <depend package="controlit_cmake" />
    <depend package="controlit_dependency_addons" />
    <depend package="controlit_logging" /> -->

    <export>
        <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lcontrolit_core" />
        <controlit plugin="${prefix}/tests/factories/controlit_example_plugin.xml" />
    </export>

</package>
